build_engine_core.log
   Compiling engine-core v0.1.0 (C:\Users\adilh\repos\AudioVerseEngine\engine-core)
error[E0432]: unresolved import `bevy_input::prelude::Input`
 --> engine-core\src\systems.rs:2:36
  |
2 | use bevy_input::prelude::{KeyCode, Input};
  |                                    ^^^^^ no `Input` in `prelude`

error[E0432]: unresolved import `physics`
  --> engine-core\src\lib.rs:25:5
   |
25 | use physics::*;
   |     ^^^^^^^ use of unresolved module or unlinked crate `physics`
   |
   = help: if you wanted to use a crate named `physics`, use `cargo add physics` to add it to your `Cargo.toml`

warning: unused import: `components::*`
  --> engine-core\src\lib.rs:21:5
   |
21 | use components::*;
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: `RapierContext<'_>` is not a `Resource`
   --> engine-core\src\audio.rs:47:21
    |
47  |     rapier_context: Res<RapierContext>,
    |                     ^^^^^^^^^^^^^^^^^^ invalid `Resource`
    |
    = help: the trait `Resource` is not implemented for `RapierContext<'_>`
    = note: consider annotating `RapierContext<'_>` with `#[derive(Resource)]`
    = help: the following other types implement trait `Resource`:
              AccumulatedMouseMotion
              AccumulatedMouseScroll
              AppTypeRegistry
              AssetProcessor
              AssetServer
              AssetSourceBuilders
              Assets<A>
              ButtonInput<T>
            and 235 others
note: required by a bound in `Res`
   --> C:\Users\adilh\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_ecs-0.16.1\src\change_detection.rs:637:32
    |
637 | pub struct Res<'w, T: ?Sized + Resource> {
    |                                ^^^^^^^^ required by this bound in `Res`

warning: use of deprecated method `bevy_ecs::system::Query::<'w, 's, D, F>::get_single`: Please use `single` instead
  --> engine-core\src\portal.rs:23:65
   |
23 |     if let Ok((player_entity, player_transform)) = player_query.get_single() {
   |                                                                 ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `bevy_ecs::system::Query::<'w, 's, D, F>::get_single`: Please use `single` instead
  --> engine-core\src\portal.rs:24:30
   |
24 |         if teleporting_query.get_single().is_ok() {
   |                              ^^^^^^^^^^

warning: use of deprecated method `bevy_ecs::system::Query::<'w, 's, D, F>::get_single_mut`: Please use `single_mut` instead
  --> engine-core\src\portal.rs:54:86
   |
54 |     if let Ok((player_entity, mut player_transform, mut teleporting)) = player_query.get_single_mut() {
   |                                                                                      ^^^^^^^^^^^^^^

error[E0609]: no field `pitch` on type `Mut<'_, PlaybackSettings>`
  --> engine-core\src\audio.rs:39:22
   |
39 |             settings.pitch = new_pitch;
   |                      ^^^^^ unknown field
   |
   = note: available fields are: `mode`, `volume`, `speed`, `paused`, `muted` ... and 2 others

error[E0599]: no method named `cast_ray` found for struct `Res` in the current scope
  --> engine-core\src\audio.rs:64:67
   |
64 |             if let Some((entity, _intersection)) = rapier_context.cast_ray(
   |                                                    ---------------^^^^^^^^ method not found in `Res<'_, RapierContext<'_>>`

error[E0599]: no variant or associated item named `new` found for enum `Volume` in the current scope
  --> engine-core\src\audio.rs:72:47
   |
72 |                     settings.volume = Volume::new(1.0 - material.occlusion_strength);
   |                                               ^^^ variant or associated item not found in `Volume`
   |
help: there is a method `ne` with a similar name
   |
72 -                     settings.volume = Volume::new(1.0 - material.occlusion_strength);
72 +                     settings.volume = Volume::ne(1.0 - material.occlusion_strength);
   |

error[E0599]: no variant or associated item named `new` found for enum `Volume` in the current scope
  --> engine-core\src\audio.rs:74:47
   |
74 |                     settings.volume = Volume::new(0.5);
   |                                               ^^^ variant or associated item not found in `Volume`
   |
help: there is a method `ne` with a similar name
   |
74 -                     settings.volume = Volume::new(0.5);
74 +                     settings.volume = Volume::ne(0.5);
   |

error[E0599]: no variant or associated item named `new` found for enum `Volume` in the current scope
  --> engine-core\src\audio.rs:77:43
   |
77 |                 settings.volume = Volume::new(1.0);
   |                                           ^^^ variant or associated item not found in `Volume`
   |
help: there is a method `ne` with a similar name
   |
77 -                 settings.volume = Volume::new(1.0);
77 +                 settings.volume = Volume::ne(1.0);
   |

error[E0599]: no variant or associated item named `W` found for enum `KeyCode` in the current scope
  --> engine-core\src\systems.rs:12:40
   |
12 |     if keyboard_input.pressed(KeyCode::W) {
   |                                        ^ variant or associated item not found in `KeyCode`

error[E0599]: no variant or associated item named `S` found for enum `KeyCode` in the current scope
  --> engine-core\src\systems.rs:15:40
   |
15 |     if keyboard_input.pressed(KeyCode::S) {
   |                                        ^ variant or associated item not found in `KeyCode`

error[E0599]: no variant or associated item named `A` found for enum `KeyCode` in the current scope
  --> engine-core\src\systems.rs:18:40
   |
18 |     if keyboard_input.pressed(KeyCode::A) {
   |                                        ^ variant or associated item not found in `KeyCode`

error[E0599]: no variant or associated item named `D` found for enum `KeyCode` in the current scope
  --> engine-core\src\systems.rs:21:40
   |
21 |     if keyboard_input.pressed(KeyCode::D) {
   |                                        ^ variant or associated item not found in `KeyCode`

error[E0599]: no variant or associated item named `LShift` found for enum `KeyCode` in the current scope
  --> engine-core\src\systems.rs:27:40
   |
27 |     if keyboard_input.pressed(KeyCode::LShift) {
   |                                        ^^^^^^ variant or associated item not found in `KeyCode`

warning: use of deprecated method `bevy_ecs::system::Query::<'w, 's, D, F>::get_single_mut`: Please use `single_mut` instead
  --> engine-core\src\systems.rs:35:44
   |
35 |     if let Ok(mut player_move_dir) = query.get_single_mut() {
   |                                            ^^^^^^^^^^^^^^

Some errors have detailed explanations: E0277, E0432, E0599, E0609.
For more information about an error, try `rustc --explain E0277`.
warning: `engine-core` (lib) generated 5 warnings
error: could not compile `engine-core` (lib) due to 13 previous errors; 5 warnings emitted
